Updated WASM tooling; Fixed CRC32 issue per upstream sources; Simplified CRC32 stream; Removed some of the console spam; Updated naming on the h2 tooling index; Minor (very minor) tweaks to the JavaScript.
Plenty of room to make it less inefficient.  I could stick more of it in the WASM, but that makes the whole thing a real pain for everyone else to edit.

--- a/tools/h2.html
+++ b/tools/h2.html
@@ -57,7 +57,7 @@
             <ul>
                 <li><a href="https://aluigi.altervista.org/quickbms.htm">QuickBMS</a> (<a href="https://raw.githubusercontent.com/pawREP/ZHM5PatchBuilder/master/QuickBMS_script/Hitman2_rpkg.bms">Hitman2_rpkg.bms</a>) Used for extraction of the RPKG archives</li>
                 <li><a href="https://github.com/pawREP/ZHM5PatchBuilder">Patch Builder</a> Allows you to create your own custom patch archives for mods</li>
-                <li><a href="./online/xtea/">XTEA</a> Swixel's XTEA Tool (Improved)</li>
+                <li><a href="./online/xtea/">XTEA Online WebAssembly Powered Editor</a> (<a href="https://github.com/awstanley/hitman-wasm-packagedefinition.rs">sources</a>)</li>
                 <li><a href="https://github.com/hcs64/ww2ogg">ww2ogg</a> Allows you to convert sound files found in WWEM/WWEV to Ogg Vorbis</li>
             </ul>
 		</div>
