add discord invite link url

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 		<div class="logo">
 			<a href="/">Glacier² Mods</a>
 		</div>
+		<!--Discord invite link-->
+		<a href="https://discord.gg/hxPT9rf">
+			<div class="discord">
+			</div>
+		</a>
 		<!--NAVIGATION BAR-->
 		<div class="menu-outer">
 			<div class="dropdown">
