--- a/resources/h2texturemodding.html
+++ b/resources/h2texturemodding.html
@@ -9,6 +9,13 @@
 		<title>G² Mods - HITMAN²</title>
 	</head>
 	<body>
+		<!--PRELOAD-->
+		<div id="preload">
+			<img src="/images/discord.svg" />
+			<img src="/images/discord_hover.svg" />
+			<img src="/images/g2logo.svg" />
+			<img src="/images/g2logo_hover.svg" />
+		</div>
 		<!--TOP LEFT HOME BUTTON/LOGO-->
 		<div class="logo">
 			<a href="/">Glacier² Mods</a>
