--- a/resources/h2texturemodding.html
+++ b/resources/h2texturemodding.html
@@ -67,6 +67,7 @@
 		<ul>
 		    <li><a href="https://aluigi.altervista.org/quickbms.htm">QuickBMS</a> (With the <a href="https://raw.githubusercontent.com/pawREP/ZHM5PatchBuilder/master/QuickBMS_script/Hitman2_rpkg.bms">Hitman 2 RPKG script</a>)</li>
 		    <li><a href="https://github.com/pawREP/ZHM5PatchBuilder">Hitman 2 RPKG Patch Builder</a> (Thank you pawREP for this tool)</li>
+		    <li><a href="/tools/online/xtea/index.html">XTEA Online WebAssembly Powered Editor</a> (Used to modify packagedefintions.txt) Replacement for the old h6xxtea tool.</li>
 		    <li><a href="https://www.richwhitehouse.com/index.php?content=inc_projects.php&amp;showproject=91">Noesis</a> (With <a href="https://i.notex.app/tex_Hitman2_PC_dat_vap.py">Hitman 2's Texture Plugin</a> - Thanks to Acewell from <a href="https://forum.xentax.com/memberlist.php?mode=viewprofile&u=4970">Xentax</a>)</li>
 		    <li><a href="https://www.adobe.com/au/products/photoshop.html">Photoshop</a> (With <a href="https://developer.nvidia.com/nvidia-texture-tools-adobe-photoshop">Nvidia's DDS Plugin</a>) or <a href="https://www.getpaint.net/">Paint.net</a> (With the <a href="https://forums.getpaint.net/topic/111731-dds-filetype-plus-2019-01-30/">DDS FileType Plus</a> plugin)<br /><em>Note: Gimp may also work if you can find a DDS plugin for it, but I have not tried it.</em></li>
 		    <li>Hex Editor (I use <a href="https://mh-nexus.de/en/hxd/">HxD</a>)</li>
