--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 				<div class="dropdown-content">
 					<a href="/tools/h2.html">HITMAN 2</a>
 					<a href="#">HITMAN</a>
-					<a href="#">Hitman: Absolution</a>
-					<a href="#">Deus Ex: Mankind Divided</a>
+					<a href="#">HITMAN: ABSOLUTION</a>
+					<a href="#">DEUS EX: MANKIND DIVIDED</a>
 				</div>
 			</div>
 			<div class="dropdown">
@@ -37,8 +37,8 @@
 				<div class="dropdown-content">
 					<a href="/resources/h2.html">HITMAN 2</a>
 					<a href="#">HITMAN</a>
-					<a href="#">Hitman: Absolution</a>
-					<a href="#">Deus Ex: Mankind Divided</a>
+					<a href="#">HITMAN: ABSOLUTION<</a>
+					<a href="#">DEUS EX: MANKIND DIVIDED</a>
 				</div>
 			</div>
 			<div class="dropdown">
@@ -46,8 +46,8 @@
 				<div class="dropdown-content">
 					<a href="/mods/h2/h2.html">HITMAN 2</a>
 					<a href="#">HITMAN</a>
-					<a href="#">Hitman: Absolution</a>
-					<a href="#">Deus Ex: Mankind Divided</a>
+					<a href="#">HITMAN: ABSOLUTION<</a>
+					<a href="#">DEUS EX: MANKIND DIVIDED</a>
 				</div>
 			</div>
 		</div>
@@ -73,12 +73,12 @@
 				<a href="/mods/h2016/h2016.html">HITMAN</a>
 			</div>
 			<div class="griditem-game">
-				<img src="images/games/demd.jpg" alt="demd"> 
-				<a href="/mods/demd/demd">Deus Ex: Mankind Divided</a>
+				<img src="images/games/demd.jpg" alt="demd">
+				<a href="/mods/demd/demd">DEUS EX: MANKIND DIVIDED</a>
 			</div>
 			<div class="griditem-game">
 				<img src="images/games/hma.jpg" alt="hma"> 
-				<a href="/mods/hma/hma">Hitman: Absolution</a>
+				<a href="/mods/hma/hma">HITMAN: ABSOLUTION</a>
 			</div>
 		</div>
 		<!--FOOTER-->
