--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 				<div class="dropdown-content">
 					<a href="/mods/h2/h2.html">HITMAN 2</a>
 					<a href="#">HITMAN</a>
-					<a href="#">HITMAN: ABSOLUTION<</a>
+					<a href="#">HITMAN: ABSOLUTION</a>
 					<a href="#">DEUS EX: MANKIND DIVIDED</a>
 				</div>
 			</div>
