remove home link from all pages

--- a/mods/h2/h2.html
+++ b/mods/h2/h2.html
@@ -21,15 +21,12 @@
 		<!--NAVIGATION BAR-->
 		<div class="menu-outer">
 			<div class="dropdown">
-				<a href="/"><button class="dropbtn">Home</button></a>
-			</div>
-			<div class="dropdown">
 				<button class="dropbtn">Tools</button>
 				<div class="dropdown-content">
 					<a href="/tools/h2.html">HITMAN 2</a>
 					<a href="#">HITMAN</a>
-					<a href="#">Hitman: Absolution</a>
-					<a href="#">Deus Ex: Mankind Divided</a>
+					<a href="#">HITMAN: ABSOLUTION</a>
+					<a href="#">DEUS EX: MANKIND DIVIDED</a>
 				</div>
 			</div>
 			<div class="dropdown">
@@ -37,8 +34,8 @@
 				<div class="dropdown-content">
 					<a href="/resources/h2.html">HITMAN 2</a>
 					<a href="#">HITMAN</a>
-					<a href="#">Hitman: Absolution</a>
-					<a href="#">Deus Ex: Mankind Divided</a>
+					<a href="#">HITMAN: ABSOLUTION<</a>
+					<a href="#">DEUS EX: MANKIND DIVIDED</a>
 				</div>
 			</div>
 			<div class="dropdown">
@@ -46,8 +43,8 @@
 				<div class="dropdown-content">
 					<a href="/mods/h2/h2.html">HITMAN 2</a>
 					<a href="#">HITMAN</a>
-					<a href="#">Hitman: Absolution</a>
-					<a href="#">Deus Ex: Mankind Divided</a>
+					<a href="#">HITMAN: ABSOLUTION</a>
+					<a href="#">DEUS EX: MANKIND DIVIDED</a>
 				</div>
 			</div>
 		</div>
