--- a/tools/h2.html
+++ b/tools/h2.html
@@ -34,7 +34,7 @@
 				<div class="dropdown-content">
 					<a href="/resources/h2.html">HITMAN 2</a>
 					<a href="#">HITMAN</a>
-					<a href="#">HITMAN: ABSOLUTION<</a>
+					<a href="#">HITMAN: ABSOLUTION</a>
 					<a href="#">DEUS EX: MANKIND DIVIDED</a>
 				</div>
 			</div>
