--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<div class="dropdown">
 				<button class="dropbtn">Tools</button>
 				<div class="dropdown-content">
-					<a href="/tools/h2.html">HITMAN 2</a>
+					<a href="/tools/h2">HITMAN 2</a>
 					<a href="#">HITMAN</a>
 					<a href="#">HITMAN: ABSOLUTION</a>
 					<a href="#">DEUS EX: MANKIND DIVIDED</a>
@@ -32,7 +32,7 @@
 			<div class="dropdown">
 				<button class="dropbtn">Resources</button>
 				<div class="dropdown-content">
-					<a href="/resources/h2.html">HITMAN 2</a>
+					<a href="/resources/h2">HITMAN 2</a>
 					<a href="#">HITMAN</a>
 					<a href="#">HITMAN: ABSOLUTION</a>
 					<a href="#">DEUS EX: MANKIND DIVIDED</a>
@@ -41,7 +41,7 @@
 			<div class="dropdown">
 				<button class="dropbtn">Mods</button>
 				<div class="dropdown-content">
-					<a href="/mods/h2/h2.html">HITMAN 2</a>
+					<a href="/mods/h2/h2">HITMAN 2</a>
 					<a href="#">HITMAN</a>
 					<a href="#">HITMAN: ABSOLUTION</a>
 					<a href="#">DEUS EX: MANKIND DIVIDED</a>
@@ -63,11 +63,11 @@
 		<div class="game-container">
 			<div class="griditem-game">
 				<img src="images/games/h2.jpg" alt="h2"> 
-				<a href="/mods/h2/h2.html">HITMAN 2</a>
+				<a href="/mods/h2/h2">HITMAN 2</a>
 			</div>
 			<div class="griditem-game">
 				<img src="images/games/h2016.jpg" alt="h2016"> 
-				<a href="/mods/h2016/h2016.html">HITMAN</a>
+				<a href="/mods/h2016/h2016">HITMAN</a>
 			</div>
 			<div class="griditem-game">
 				<img src="images/games/demd.jpg" alt="demd">
