hacked together images in css BEGONE

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<body>
 		<!--TOP LEFT HOME BUTTON/LOGO-->
 		<div class="logo">
+			<img src="https://www.g2-mods.com/images/g2logo.svg">
 			<a href="/">Glacier² Mods</a>
 		</div>
 		<!--Discord invite link-->
