--- a/resources/h2texturemodding.html
+++ b/resources/h2texturemodding.html
@@ -11,6 +11,7 @@
 	<body>
 		<!--TOP LEFT HOME BUTTON/LOGO-->
 		<div class="logo">
+			<img src="/images/g2logo.svg">
 			<a href="/">Glacier² Mods</a>
 		</div>
 		<!--Discord invite link-->
