--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<div class="dropdown">
 				<button class="dropbtn">Tools</button>
 				<div class="dropdown-content">
-					<a href="/tools/h2">HITMAN 2</a>
+					<a href="/tools/h2.html">HITMAN 2</a>
 					<a href="#">HITMAN</a>
 					<a href="#">HITMAN: ABSOLUTION</a>
 					<a href="#">DEUS EX: MANKIND DIVIDED</a>
@@ -33,7 +33,7 @@
 			<div class="dropdown">
 				<button class="dropbtn">Resources</button>
 				<div class="dropdown-content">
-					<a href="/resources/h2">HITMAN 2</a>
+					<a href="/resources/h2.html">HITMAN 2</a>
 					<a href="#">HITMAN</a>
 					<a href="#">HITMAN: ABSOLUTION</a>
 					<a href="#">DEUS EX: MANKIND DIVIDED</a>
@@ -42,7 +42,7 @@
 			<div class="dropdown">
 				<button class="dropbtn">Mods</button>
 				<div class="dropdown-content">
-					<a href="/mods/h2/h2">HITMAN 2</a>
+					<a href="/mods/h2/h2.html">HITMAN 2</a>
 					<a href="#">HITMAN</a>
 					<a href="#">HITMAN: ABSOLUTION</a>
 					<a href="#">DEUS EX: MANKIND DIVIDED</a>
