Update texture modding tutorial

--- a/resources/h2texturemodding.html
+++ b/resources/h2texturemodding.html
@@ -67,12 +67,13 @@
 		    <li><a href="https://github.com/pawREP/ZHM5PatchBuilder">Hitman 2 RPKG Patch Builder</a> (Thank you pawREP for this tool)</li>
 		    <li><a href="/tools/online/xtea/index.html">XTEA Online WebAssembly Powered Editor</a> (Used to modify packagedefintions.txt) Replacement for the old h6xxtea tool.</li>
 		    <li><a href="https://www.richwhitehouse.com/index.php?content=inc_projects.php&amp;showproject=91">Noesis</a> (With <a href="https://i.notex.app/tex_Hitman2_PC_dat_vap.py">Hitman 2's Texture Plugin</a> - Thanks to Acewell from <a href="https://forum.xentax.com/memberlist.php?mode=viewprofile&u=4970">Xentax</a>)</li>
-		    <li><a href="https://www.adobe.com/au/products/photoshop.html">Photoshop</a> (With <a href="https://developer.nvidia.com/nvidia-texture-tools-adobe-photoshop">Nvidia's DDS Plugin</a>) or <a href="https://www.getpaint.net/">Paint.net</a> (With the <a href="https://forums.getpaint.net/topic/111731-dds-filetype-plus-2019-01-30/">DDS FileType Plus</a> plugin)<br /><em>Note: Gimp may also work if you can find a DDS plugin for it, but I have not tried it.</em></li>
+		    <li><a href="https://www.adobe.com/au/products/photoshop.html">Photoshop</a> (With <a href="https://developer.nvidia.com/nvidia-texture-tools-adobe-photoshop">NVIDIA Texture Tools</a> or <a href="https://software.intel.com/en-us/articles/intel-texture-works-plugin">Intel® Texture Works Plugin</a>) or if you don't have Photoshop you can try <a href="https://www.getpaint.net/">Paint.net</a> (With <a href="https://forums.getpaint.net/topic/111731-dds-filetype-plus-2019-01-30/">DDS FileType Plus</a>)<br /><em>Note: Gimp may also work if you can find a DDS plugin for it, but I have not tried it.</em></li>
 		    <li>Hex Editor (I use <a href="https://mh-nexus.de/en/hxd/">HxD</a>)</li>
 		</ul>
 		<h4> </h4>
 		<h4>Known Issues</h4>
 		<ul>
+		    <li><a href="https://developer.nvidia.com/nvidia-texture-tools-adobe-photoshop">NVIDIA Texture Tools</a> doesn't seem to support all texture types, I recommend trying <a href="https://software.intel.com/en-us/articles/intel-texture-works-plugin">Intel® Texture Works Plugin</a> instead</li>
 		    <li>Using Paint.net seems to cause ghosting issues with the textures in-game</li>
 		</ul>
 		<p>&nbsp;</p>
