--- a/resources/h2.html
+++ b/resources/h2.html
@@ -57,7 +57,7 @@
         </div>
         <div class="main-content">
             <h1 id="g2-modscom">HITMAN 2 - Resources</h1>
-				<a href="h2texturemodding.html">H2 Texture Modding</a>
+				<a href="h2texturemodding">H2 Texture Modding</a>
 		</div>
 		<!--FOOTER-->
 		<div class="footer">
