--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			<div class="dropdown">
 				<button class="dropbtn">Resources</button>
 				<div class="dropdown-content">
-					<a href="/resources/h2.html">HITMAN 2</a>
+					<a href="/resources/h2">HITMAN 2</a>
 					<a href="#">HITMAN</a>
 					<a href="#">HITMAN: ABSOLUTION</a>
 					<a href="#">DEUS EX: MANKIND DIVIDED</a>
